@@ -1,8 +1,8 @@
 .ig
 Copyright (C) 2002-10 Bruce Allen <smartmontools-support@lists.sourceforge.net>
-Copyright (C) 2004-12 Christian Franke <smartmontools-support@lists.sourceforge.net>
+Copyright (C) 2004-13 Christian Franke <smartmontools-support@lists.sourceforge.net>
 
-$Id: smartd.conf.5.in 3736 2012-12-17 07:56:08Z samm2 $
+$Id: smartd.conf.5.in 3740 2013-01-01 18:12:00Z chrfranke $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -1363,9 +1363,9 @@ To combine all of the above reports, use:
 .B \-W 2,40,45
 .fi
 
-For ATA devices, smartd interprets Attribute 194 as Temperature Celsius
+For ATA devices, smartd interprets Attribute 194 or 190 as Temperature Celsius
 by default. This can be changed to Attribute 9 or 220 by the drive
-database or by the \'-v\' directive, see below.
+database or by the \'\-v 9,temp\' or \'\-v 220,temp\' directive.
 .TP
 .B \-F TYPE
 [ATA only] Modifies the behavior of \fBsmartd\fP to compensate for some
@@ -1649,4 +1649,4 @@ SEE ALSO:
 
 .SH
 SVN ID OF THIS PAGE:
-$Id: smartd.conf.5.in 3736 2012-12-17 07:56:08Z samm2 $
+$Id: smartd.conf.5.in 3740 2013-01-01 18:12:00Z chrfranke $
